fixed page overflow

--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ body {
   justify-content: center;
   align-items: center;
   width: 100vw;
-  height: 100vh;
   background: linear-gradient(45deg, rgb(35, 11, 53), rgb(14, 173, 194));
 }
 
